--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,19 +15,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up Deno
-        uses: denoland/setup-deno@v1
+      - name: Set up Devbox environment
+        uses: jetify-com/devbox-action@v0.5.0
         with:
-          deno-version: v1.x
-
-      - name: Cache Deno dependencies
-        run: deno cache src/cli/jira.ts
+          project-path: .
 
       - name: Format
-        run: deno fmt --check
+        run: devbox run -- deno fmt --check
 
       - name: Lint
-        run: deno lint
+        run: devbox run -- deno lint
 
       - name: Test
-        run: deno test --allow-env --allow-read --allow-write=./tmp --allow-run --unstable
+        run: devbox run -- deno task test
