--- a/deno.json
+++ b/deno.json
@@ -2,23 +2,19 @@
   "$schema": "https://deno.land/x/deno/cli/schemas/config-file.v1.json",
   "compilerOptions": {
     "strict": true,
-    "target": "ES2022",
     "lib": [
       "deno.ns",
       "deno.unstable",
-      "esnext"
-    ],
-    "types": [
-      "deno.ns",
-      "deno.window"
+      "esnext",
+      "dom"
     ]
   },
   "tasks": {
     "fmt": "deno fmt",
     "lint": "deno lint",
-    "test": "deno test --allow-env --allow-read --allow-write=./tmp --allow-run --unstable",
-    "jira": "deno run --allow-env --allow-net --allow-read --allow-write --unstable src/cli/jira.ts",
-    "jira-query": "deno run --allow-env --allow-net --allow-read --allow-write --unstable src/cli/jira-query.ts"
+    "test": "deno test --allow-env --allow-read --allow-write=./tmp",
+    "jira": "deno run --allow-env --allow-net --allow-read --allow-write src/cli/jira.ts",
+    "jira-query": "deno run --allow-env --allow-net --allow-read --allow-write src/cli/jira-query.ts"
   },
   "imports": {
     "@std/": "https://deno.land/std@0.224.0/",
