--- a/deno.json
+++ b/deno.json
@@ -14,7 +14,8 @@
     "lint": "deno lint",
     "test": "deno test --allow-env --allow-read --allow-write=./tmp",
     "jira": "deno run --allow-env --allow-net --allow-read --allow-write src/cli/jira.ts",
-    "jira-query": "deno run --allow-env --allow-net --allow-read --allow-write src/cli/jira-query.ts"
+    "jira-query": "deno run --allow-env --allow-net --allow-read --allow-write src/cli/jira-query.ts",
+    "sbom": "deno run --allow-env --allow-read=deno.lock,src/version.ts --allow-run --allow-write scripts/generate_sbom_spdx.ts"
   },
   "imports": {
     "@std/": "https://deno.land/std@0.224.0/",
