Add markdownlint task and hook

--- a/deno.json
+++ b/deno.json
@@ -15,7 +15,8 @@
     "test": "deno test --allow-env --allow-read --allow-write=./tmp",
     "jira": "deno run --allow-env --allow-net --allow-read --allow-write src/cli/jira.ts",
     "jira-query": "deno run --allow-env --allow-net --allow-read --allow-write src/cli/jira-query.ts",
-    "sbom": "deno run --allow-env --allow-read=deno.lock,src/version.ts --allow-run --allow-write scripts/generate_sbom_spdx.ts"
+    "sbom": "deno run --allow-env --allow-read=deno.lock,src/version.ts --allow-run --allow-write scripts/generate_sbom_spdx.ts",
+    "lint-md": "deno run --allow-read --allow-write --allow-net --allow-env --allow-sys=homedir npm:markdownlint-cli@0.39.0 --config .markdownlint.json README.md AGENTS.md CODEX.md THIRD_PARTY_LICENSES.md"
   },
   "imports": {
     "@std/": "https://deno.land/std@0.224.0/",
