--- a/deno.json
+++ b/deno.json
@@ -10,20 +10,25 @@
     ]
   },
   "tasks": {
-    "fmt": "deno fmt",
-    "lint": "deno lint",
-    "test": "deno test --allow-env --allow-read --allow-write=./tmp",
     "jira": "deno run --allow-env --allow-net --allow-read --allow-write src/cli/jira.ts",
     "jira-query": "deno run --allow-env --allow-net --allow-read --allow-write src/cli/jira-query.ts",
-    "sbom": "deno run --allow-env --allow-read=deno.lock,src/version.ts --allow-run --allow-write scripts/generate_sbom_spdx.ts",
-    "lint-md": "deno run --allow-read --allow-write --allow-net --allow-env --allow-sys=homedir npm:markdownlint-cli@0.39.0 --config .markdownlint.json README.md AGENTS.md CODEX.md THIRD_PARTY_LICENSES.md"
+    "test": "deno test --allow-env --allow-read --allow-write=./tmp",
+    "fmt": "deno fmt",
+    "lint": "deno lint",
+    "lint-md": "deno run --allow-read --allow-write --allow-net --allow-env --allow-sys=homedir npm:markdownlint-cli@^0.45.0 --config .markdownlint.json *.md",
+    "sbom": "deno run --allow-env --allow-read=deno.lock,src/version.ts --allow-run --allow-write scripts/generate_sbom_spdx.ts"
   },
   "imports": {
-    "@std/": "https://deno.land/std@0.224.0/",
-    "@cliffy/": "https://deno.land/x/cliffy@v1.0.0-rc.4/",
-    "@dotenv": "https://deno.land/std@0.224.0/dotenv/mod.ts",
-    "@jira": "npm:jira.js",
-    "@exceljs": "npm:exceljs"
+    "@cliffy/command": "jsr:@cliffy/command@^1.0.0-rc.8",
+    "@cliffy/prompt": "jsr:@cliffy/prompt@^1.0.0-rc.8",
+    "@std/assert": "jsr:@std/assert@^1.0.15",
+    "@std/csv": "jsr:@std/csv@^1.0.6",
+    "@std/dotenv": "jsr:@std/dotenv@^0.225.5",
+    "@std/fs": "jsr:@std/fs@^1.0.19",
+    "@std/path": "jsr:@std/path@^1.1.2",
+    "@std/testing": "jsr:@std/testing@^1.0.16",
+    "@jira": "npm:jira.js@^5.2.2",
+    "@exceljs": "npm:exceljs@^4.4.0"
   },
   "fmt": {
     "useTabs": false,
